_sass: Remove anchor link wrapping fix due to upstream changes

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -62,11 +62,6 @@ summary {
 }
 
 .main-content {
-  a {
-    overflow-wrap: anywhere;
-    white-space: normal;
-  }
-
   dl {
     display: block;
     grid-template-columns: none;
